# aws-sso-to-credentials

./: LICENSE  README.md  main.py  pyproject.toml
utils/: config_utils.py  credentials_utils.py
